--- a/initialHTML.html
+++ b/initialHTML.html
@@ -13,7 +13,7 @@
 
 
 
-<p ng-repeat="word in words"> {{word}} </p>
+<p ng-repeat="word in words" ng-class="{active: $index == selected}"> {{word}} </p>
 
 <!-- bonus button that will fire off for given amount of time,
 idea of math -->
